@@ -35,6 +35,15 @@ endif::[]
 [[release-notes-3.x]]
 === Ruby Agent version 3.x
 
+[float]
+[[unreleased]]
+==== Unreleased
+
+[float]
+===== Changed
+
+- Allow action dispatch spy to be disabled via `disabled_instrumentations` {pull}657[#657]
+
 [[release-notes-3.3.0]]
 ==== 3.3.0 (2019-12-05)
 
